testsuite/tests/checks/renamings/test.out
renamings.ads:3:4: error: renaming declaration
3 |    J : Integer renames I;     --  FLAG
  |    ^ 

